--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tafuta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="assets/icon/tafuta.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -13,12 +14,18 @@
         <form id="track-form" class="mt-4">
             <div class="mb-3">
                 <label for="phone-number" class="form-label">Enter Phone Number</label>
-                <input type="tel" class="form-control" id="phone-number" name="phone-number" placeholder="+243000000000" required>
+                <input type="tel" class="form-control" id="phone-number" name="phone-number" placeholder="+24300000000" required>
             </div>
             <button type="submit" class="btn btn-primary">Track</button>
         </form>
         <div id="result" class="mt-4"></div>
     </div>
+
+    <div id="reported-numbers" class="mt-5">
+        <h2>Reported Numbers</h2>
+        <ul id="number-list" class="list-group"></ul>
+    </div>
+    
     <script src="js/app.js"></script>
 </body>
 </html>
