adding date a time to the report

--- a/report.html
+++ b/report.html
@@ -51,6 +51,7 @@
                         <tr>
                             <th>Phone Number</th>
                             <th>Reports</th>
+                            <th>Date & Time</th>
                             <th>Last Location</th>
                             <th>Network</th>
                         </tr>
