updating places with names

--- a/report.html
+++ b/report.html
@@ -53,6 +53,7 @@
                             <th>Reports</th>
                             <th>Date & Time</th>
                             <th>Last Location</th>
+                            <th>Places</th>
                             <th>Network</th>
                         </tr>
                     </thead>
