--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="assets/icon/tafuta.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body style="background-image: url('assets/images/taf.webp'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body>
     <div class="container d-flex flex-column align-items-center mt-5">
         <h1 class="text-center mb-4">Tafuta - Number Tracker</h1>
         <form id="track-form" class="col-md-6 col-sm-8 col-10">
