--- a/Dashboard.html
+++ b/Dashboard.html
@@ -25,6 +25,28 @@
                 <option value="Vodacom">Vodacom</option>
                 <option value="Unknown">Unknown</option>
             </select>
+            <label for="place-filter">Place:</label>
+            <select id="place-filter">
+                <option value="">All</option>
+                <option value="Katindo">Katindo</option>
+                <option value="Himbi">Himbi</option>
+                <option value="Les Volcans">Les Volcans</option>
+                <option value="Mikeno">Mikeno</option>
+                <option value="Ndosho">Ndosho</option>
+                <option value="Majengo">Majengo</option>
+                <option value="Mabanga Nord">Mabanga Nord</option>
+                <option value="Mabanga Sud">Mabanga Sud</option>
+                <option value="Kasika">Kasika</option>
+                <option value="Mapendo">Mapendo</option>
+                <option value="Murara">Murara</option>
+                <option value="Bujovu">Bujovu</option>
+                <option value="Kahembe">Kahembe</option>
+                <option value="Kyeshero">Kyeshero</option>
+                <option value="Mugunga">Mugunga</option>
+                <option value="Virunga">Virunga</option>
+                <option value="Karisimbi">Karisimbi</option>
+                <option value="Kyeshero II">Kyeshero II</option>
+            </select>
             <button class="btn btn-primary" onclick="fetchDashboardData()">Apply Filters</button>
         </div>
 
