--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <button type="submit" class="btn btn-primary">
                 Login</button>
             </form>
-            <p class="mt-3">Don't have an account? <a href="/register">Register here</a>.</p>
+            <p class="mt-3">Don't have an account? <a href="/register.html">Register here</a>.</p>
         </div>
     </body>
     </html>
